Texture node in compositing nodes does not update #47610

Closed
opened 2016-02-28 06:27:52 +01:00 by Satoshi Doita · 6 comments

System Information
Windows 7 Professional Service Pack 1 64-bit
Intel Core i7-2600 3.40GHz
8GB RAM
NVIDIA GTX560

Blender Version
Broken: 2.77 rc1 b594b25

Exact steps for others to reproduce the error

  1. Open attached file and hit F12 on image editor. You'll see wood texture.
  2. Connent stucci's color output to output's input. Now image editor shows stucci texture.
  3. Hit F12 on image editor. But nothing shows in image editor.

TextureNodeProblem_2.77rc1.blend

**System Information** Windows 7 Professional Service Pack 1 64-bit Intel Core i7-2600 3.40GHz 8GB RAM NVIDIA GTX560 **Blender Version** Broken: 2.77 rc1 b594b25 **Exact steps for others to reproduce the error** 1. Open attached file and hit F12 on image editor. You'll see wood texture. 2. Connent stucci's color output to output's input. Now image editor shows stucci texture. 3. Hit F12 on image editor. But nothing shows in image editor. [TextureNodeProblem_2.77rc1.blend](https://archive.blender.org/developer/F286176/TextureNodeProblem_2.77rc1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SatoshiDoita

Added subscriber: @SatoshiDoita

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2016-03-01 14:36:12 +01:00

This is an access to R.r.scemode & R_TEXNODE_PREVIEW from outside of a render pipeline. Looking into it.

This is an access to `R.r.scemode & R_TEXNODE_PREVIEW` from outside of a render pipeline. Looking into it.

This issue was referenced by 9c183f60e1

This issue was referenced by 9c183f60e1b0892614cf64db274488ff5bc61620

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47610
No description provided.