Fix T47610: Texture node in compositing nodes does not update

The issue was caused by some code accessing R from a functions which
are marked as safe for use from outside of render pipeline.

Now those functions are safe(er) for use.