source/blender/render/intern/source/renderdatabase.c
@@ -956,6 +956,7 @@ HaloRen *RE_inithalo(Render *re, ObjectRen *obr, Material *ma,
                      const float *orco, float hasize, float vectsize, int seed)
 {
 	const bool skip_load_image = (re->r.scemode & R_NO_IMAGE_LOAD) != 0;
+	const bool texnode_preview = (re->r.scemode & R_TEXNODE_PREVIEW) != 0;
 	HaloRen *har;
 	MTex *mtex;
 	float tin, tr, tg, tb, ta;
@@ -1047,7 +1048,13 @@ HaloRen *RE_inithalo(Render *re, ObjectRen *obr, Material *ma,
 				}
 			}
 
-			externtex(mtex, texvec, &tin, &tr, &tg, &tb, &ta, 0, re->pool, skip_load_image);
+			externtex(mtex,
+			          texvec,
+			          &tin, &tr, &tg, &tb, &ta,
+			          0,
+			          re->pool,
+			          skip_load_image,
+			          texnode_preview);
 
 			yn= tin*mtex->colfac;
 			//zn= tin*mtex->alphafac;
@@ -1067,7 +1074,8 @@ HaloRen *RE_inithalo(Render *re, ObjectRen *obr, Material *ma,
 	}
 
 	har->pool = re->pool;
-	har->skip_load_image = (re->r.scemode & R_NO_IMAGE_LOAD) != 0;
+	har->skip_load_image = skip_load_image;
+	har->texnode_preview = texnode_preview;
 
 	return har;
 }
@@ -1077,6 +1085,7 @@ HaloRen *RE_inithalo_particle(Render *re, ObjectRen *obr, DerivedMesh *dm, Mater
                               const float *orco, const float *uvco, float hasize, float vectsize, int seed, const float pa_co[3])
 {
 	const bool skip_load_image = (re->r.scemode & R_NO_IMAGE_LOAD) != 0;
+	const bool texnode_preview = (re->r.scemode & R_TEXNODE_PREVIEW) != 0;
 	HaloRen *har;
 	MTex *mtex;
 	float tin, tr, tg, tb, ta;
@@ -1180,7 +1189,13 @@ HaloRen *RE_inithalo_particle(Render *re, ObjectRen *obr, DerivedMesh *dm, Mater
 				copy_v3_v3(texvec, orco);
 			}
 
-			hasrgb = externtex(mtex, texvec, &tin, &tr, &tg, &tb, &ta, 0, re->pool, skip_load_image);
+			hasrgb = externtex(mtex,
+			                   texvec,
+			                   &tin, &tr, &tg, &tb, &ta,
+			                   0,
+			                   re->pool,
+			                   skip_load_image,
+			                   texnode_preview);
 
 			//yn= tin*mtex->colfac;
 			//zn= tin*mtex->alphafac;
@@ -1225,6 +1240,7 @@ HaloRen *RE_inithalo_particle(Render *re, ObjectRen *obr, DerivedMesh *dm, Mater
 
 	har->pool = re->pool;
 	har->skip_load_image = (re->r.scemode & R_NO_IMAGE_LOAD) != 0;
+	har->texnode_preview = (re->r.scemode & R_TEXNODE_PREVIEW) != 0;
 
 	return har;
 }
